[package]
name = "tagmu"
version = "0.1.0"
authors = ["William Goodall <wgoodall01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plist = {git = "https://github.com/wgoodall01/rust-plist" }
clap = { git = "https://github.com/clap-rs/clap/" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
sled = {version = "0.31.0"}
snafu = "0.6.2"
